fixes card alignment in player 1 hand

--- a/css/main.css
+++ b/css/main.css
@@ -32,8 +32,8 @@ body {
   background: rgba(0, 0, 0, 0);
   grid-area: 1 / 1 / 4 / 3;
   display: grid;
-  grid-template-columns: 25px repeat(3, 55px);
-  grid-template-rows: repeat(3, 55px) 125px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(12, 2em) 150px;
 }
 .card {
   background-color: rgb(0 0 0 / 80%);
@@ -56,40 +56,40 @@ body {
 }
 
 #one {
-  grid-area: 4/4;
+  grid-area: 13/1;
 }
 #two {
-  grid-area: 3/4;
+  grid-area: 12/1;
 }
 #three {
-  grid-area: 2/4;
+  grid-area: 11/1;
 }
 #four {
-  grid-area: 1/4;
+  grid-area: 10/1;
 }
 #five {
-  grid-area: 4/3;
+  grid-area: 9/1;
 }
 #six {
-  grid-area: 3/3;
+  grid-area: 8/1;
 }
 #seven {
-  grid-area: 2/3;
+  grid-area: 7/1;
 }
 #eight {
-  grid-area: 1/3;
+  grid-area: 6/1;
 }
 #nine {
-  grid-area: 4/2;
+  grid-area: 5/1;
 }
 #ten {
-  grid-area: 3/2;
+  grid-area: 4/1;
 }
 #eleven {
-  grid-area: 2/2;
+  grid-area: 3/1;
 }
 #twelve {
-  grid-area: 1/2;
+  grid-area: 2/1;
 }
 #p1-captured {
   grid-area: 5/1;
